FIX: avatar popout z-index

--- a/src/entities/shared/ui/user-logo/UserLogo/UserLogo.module.scss
+++ b/src/entities/shared/ui/user-logo/UserLogo/UserLogo.module.scss
@@ -1,5 +1,5 @@
 .avatar_container {
-  @apply mt-2 z-0;
+  @apply mt-2 z-40;
 }
 
 .avatar {
